kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store
  labels:
    app: retail-store
    environment: dev
