kubernetes/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: catalog
  namespace: retail-store

spec:
  replicas: 2

  selector:
    matchLabels:
      app: catalog

  template:

    metadata:
      labels:
        app: catalog

    spec:

      containers:

      - name: catalog

        image: aftabattar/retail-catalog:v1

        imagePullPolicy: Always

        ports:

        - containerPort: 8080

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
