kubernetes/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: checkout
  namespace: retail-store

spec:
  replicas: 2

  selector:
    matchLabels:
      app: checkout

  template:
    metadata:
      labels:
        app: checkout

    spec:
      containers:

      - name: checkout

        image: aftabattar/retail-checkout:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
