kubernetes/dynamodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: carts-db
  namespace: retail-store

spec:
  replicas: 1

  selector:
    matchLabels:
      app: carts-db

  template:

    metadata:
      labels:
        app: carts-db

    spec:

      containers:

      - name: carts-db

        image: amazon/dynamodb-local:1.20.0

        ports:
        - containerPort: 8000
