kubernetes/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: orders
  namespace: retail-store

spec:
  replicas: 2

  selector:
    matchLabels:
      app: orders

  template:
    metadata:
      labels:
        app: orders

    spec:
      containers:

      - name: orders

        image: aftabattar/retail-orders:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
