kubernetes/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ui
  namespace: retail-store

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ui

  template:
    metadata:
      labels:
        app: ui

    spec:
      containers:
      - name: ui

        image: aftabattar/retail-ui:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8080
