kubernetes/checkout-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: checkout-service
  namespace: retail-store

spec:

  selector:
    app: checkout

  ports:

  - port: 80

    targetPort: 8080

  type: ClusterIP
