kubernetes/dynamodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: carts-db
  namespace: retail-store

spec:

  selector:
    app: carts-db

  ports:

  - port: 8000
    targetPort: 8000
