kubernetes/orders-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: orders-service
  namespace: retail-store

spec:

  selector:
    app: orders

  ports:

  - port: 80

    targetPort: 8080

  type: ClusterIP
