kubernetes/ui-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ui-service
  namespace: retail-store

spec:
  selector:
    app: ui

  ports:
  - port: 80
    targetPort: 8080

  type: NodePort
