kubernetes/retail-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: retail-ingress
  namespace: retail-store

spec:
  ingressClassName: nginx

  rules:
  - host: retail.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: ui-service

            port:

              number: 80
